# junk

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  PRODUCTION_AGENTIC_PLAN.txt  PRODUCTION_SETUP.txt  README.md  SYSTEM_GUIDE.txt  docker-compose.yml  pyproject.toml  set-up.sh  setup.sh  startup.sh
.github/workflows/: security.yml  tests.yml
app/: __init__.py  admin_router.py  config.py  domain.py  main.py
app/agent/: __init__.py  executor.py  planner.py  router.py  task_queue.py  workflow.py
app/audit/: logger.py
app/auth/: dependencies.py  jwt.py  password.py  router.py
app/capabilities/: __init__.py
app/capabilities/_template/: README.md  __init__.py  manifest.py.template  tools.py.template
app/capabilities/aci/: manifest.py
app/capabilities/brand/: manifest.py
app/capabilities/easm/: __init__.py  manifest.py  tools.py
app/capabilities/easm/evals/: __init__.py  golden.jsonl
app/capabilities/easm/prompts/: v1.md
app/capabilities/reports/: __init__.py  ingestion.py  manifest.py  retrievers.py  seed.py  tools.py
app/capabilities/reports/evals/: __init__.py  golden.jsonl
app/capabilities/reports/prompts/: v1.md
app/capabilities/testkit/: __init__.py  manifest.py  tools.py
app/capabilities/testkit/prompts/: v1.md
app/core/: __init__.py  api.py  bootstrap.py  contracts.py  errors.py  registry.py  router.py
app/core/action_gate/: __init__.py  gate.py
app/core/agent/: __init__.py  answering.py  core_tools.py  engines.py  fast_rag.py  graph.py  langgraph_engine.py  nodes.py  orchestrator.py  planner.py  specialist.py  state.py  supervisor.py
app/core/api/: __init__.py  admin_router.py  auth_router.py  chat_router.py  deps.py  errors.py  middleware.py  schemas.py
app/core/db/: __init__.py  migrate.py  pg_datastore.py  postgres.py  repository_protocol.py
app/core/db/migrations/: 0001_chat_audit.sql  0001_init.sql  0002_summarized_upto.sql
app/core/guardrails/: __init__.py  base.py  detectors.py  pipeline.py
app/core/ingestion/: __init__.py  connectors.py  indexer.py  parsers.py  temporal_worker.py
app/core/llm/: __init__.py  base.py  deterministic.py  lanes.py  openai_compat.py  sglang_client.py
app/core/mcp/: __init__.py  fastmcp_client.py  inprocess.py  protocol.py  remote.py  server.py
app/core/memory/: __init__.py  conversations.py  kg.py  pg_conversations.py  summarizer.py
app/core/observability/: __init__.py  audit.py  logging.py  metrics.py  tracing.py
app/core/rag/: __init__.py  chunking.py  citations.py  embeddings.py  embeddings_tei.py  filters.py  pipeline.py  qdrant_backend.py  reranker.py  reranker_tei.py  vector_store.py
app/core/security/: __init__.py  context.py  deps.py  jwt.py  oidc.py  passwords.py  rbac.py  tokens.py  users.py
app/core/streaming/: __init__.py  sse.py
app/db/: __init__.py  repository.py  schema.sql  seed.py  session.py
app/documents/: __init__.py  chunker.py  ingestion.py  metadata_extractor.py  parser.py  router.py
app/eval/: __init__.py  runner.py
app/guardrails/: __init__.py  moderation.py  output_validator.py  pii.py  prompt_injection.py
app/llm/: __init__.py  client.py  ollama_client.py  prompts.py  vllm_client.py
app/mcp_server/: __init__.py  client.py  protocol.py  router.py  tools.py
app/observability/: logging.py
app/rag/: __init__.py  citation_verifier.py  embeddings.py  retrieval.py
app/rbac/: __init__.py  permissions.py  policies.py
app/reports/: __init__.py  router.py
docs/: ARB.md  ARCHITECTURE.md  SLOS.md  STAGING_CHECKLIST.md  atlas-architecture-overview.html
eval/: promptfoo.yaml
frontend/: index.html
frontend/public/: chat.html
infra/: Dockerfile  README.md  docker-compose.yml  gpu-models-deploy.txt  start-llm.sh  start-support-models.sh
scripts/: easm_mcp_server_example.py  index_reports_cron.py  mcp_connect_demo.py  run_real_llm_demo.py  verify_testkit_integration.py
services/userguide-ingest/: .env.example  Dockerfile  README.md  index_user_guide.py  pyproject.toml
src/: pyproject.toml  run_demo.py
src/security_intel/: __init__.py  config.py  main.py
src/security_intel/agents/: identity.py  orchestrator.py  planner.py  registry.py  synthesis_join.py
src/security_intel/agents/atlas/: tools.py
src/security_intel/agents/aura/: tools.py
src/security_intel/agents/easm/: agent.py  tools.py
src/security_intel/agents/reports/: agent.py  tools.py
src/security_intel/agents/userguide/: tools.py
src/security_intel/api/: auth.py  routes.py  schemas.py  streaming.py
src/security_intel/db/: migrations.py  postgres.py
src/security_intel/llm/: __init__.py  provider.py
src/security_intel/memory/: checkpointer.py  conversations.py  summarizer.py
src/security_intel/observability/: eval_scoring.py  langfuse_client.py  logging.py  metrics.py  middleware.py  tracing.py
src/security_intel/prompts/: __init__.py  agent.py  atlas.py  aura.py  easm.py  enrichment.py  orchestrator.py  planner.py  reports.py  sentinel.py  userguide.py
src/security_intel/security/: guardrails.py  human_in_loop.py  patterns.py  rbac.py
src/security_intel/state/: __init__.py  schemas.py
src/security_intel/tools/: mcp_loader.py  qdrant_search.py  query_enrichment.py  userguide_search.py
tests/: conftest.py  test_agent.py  test_api.py  test_apikey_auth.py  test_auth.py  test_chat_features.py  test_config.py  test_contracts.py  test_dynamic_tools.py  test_eval_scoring.py  test_fastmcp.py  test_guardrails_attacks.py  test_guardrails_providers.py  test_guardrails_rag.py  test_isolation.py  test_mcp_transport_auth.py  test_memory.py  test_metrics.py  test_planner.py  test_prod_config.py  test_qdrant_visibility.py  test_rbac.py  test_rls_selftest.py  test_routing.py  test_security_hardening.py  test_security_redteam.py  test_specialists.py  test_streaming_guard.py  test_synthesis_join.py  test_tenant_isolation.py
tests/eval/: README.md  _fake_llm.py  golden_queries.json  run_eval.py
