[project]
name = "contract-intelligence-poc"
version = "0.1.0"
description = "Enterprise Contract Intelligence System PoC for assignment submission"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.30",
  "pydantic>=2",
  "PyJWT>=2.8",
  "httpx>=0.27",
]

[project.optional-dependencies]
prod = [
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "pgvector>=0.3",
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",
  "sentence-transformers>=3.0",
  "qdrant-client>=1.7",
]
test = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
