[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-security-intelligence"
version = "1.0.0"
description = "Production-grade agentic RAG platform over org-scoped security intelligence (reports today; EASM/Brand/ACI as drop-in capability modules)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

# Base deps: the deterministic, zero-infra path runs on these alone.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Real LangGraph engine (agent_engine=langgraph)
langgraph = ["langgraph>=0.2.40", "langchain-core>=0.3"]
# Vector DB (retrieval_backend=qdrant)
qdrant = ["qdrant-client>=1.9"]
# Source-of-truth + RLS (store_backend=postgres)
postgres = ["psycopg[binary,pool]>=3.1"]
# Cache / rate-limit / checkpointer (cache_backend=redis)
redis = ["redis>=5.0"]
# Observability (tracing_provider=langfuse, metrics)
observability = ["langfuse>=2.0", "prometheus-client>=0.20"]
# Document parsing for local ingest helpers
parsers = ["pypdf>=4.0", "python-docx>=1.1"]
# Durable ingestion workflows
temporal = ["temporalio>=1.6"]
# Remote MCP tool servers (easm_mcp_url/brand_mcp_url/aci_mcp_url) via FastMCP
fastmcp = ["fastmcp>=2.0"]
# PII detection via Microsoft Presidio (PII_PROVIDER=presidio). Self-hosted,
# in-process. ALSO needs a spaCy model: `python -m spacy download en_core_web_lg`.
pii = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7"]

# Everything a production deployment needs.
prod = [
    "langgraph>=0.2.40", "langchain-core>=0.3",
    "qdrant-client>=1.9",
    "psycopg[binary,pool]>=3.1",
    "redis>=5.0",
    "langfuse>=2.0", "prometheus-client>=0.20",
    "pypdf>=4.0", "python-docx>=1.1",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
asi-migrate = "app.core.db.migrate:main"
asi-eval = "app.eval.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501 line length handled by formatter; B008 FastAPI Depends() default; UP042
# we keep the broadly-compatible `(str, Enum)` idiom over 3.11 StrEnum.
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
