[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-security-intelligence"
version = "1.0.0"
description = "Production-grade agentic RAG platform over org-scoped security intelligence (reports today; EASM/Brand/ACI as drop-in capability modules)."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }

# Base deps — always needed (API server, config, JWT verify, HTTP clients, math).
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyjwt>=2.8",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Real LangGraph engine (AGENT_ENGINE=langgraph). Optional — included in `prod`.
langgraph = ["langgraph>=0.2.40", "langchain-core>=0.3"]
# Remote MCP tool servers (MCP_URLS) via FastMCP. Optional — included in `prod`.
fastmcp = ["fastmcp>=2.0"]
# PII guardrail — Microsoft Presidio. ALSO needs a spaCy model (one manual step):
#   python -m spacy download en_core_web_lg
pii = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7"]

# ONE-SHOT production install: everything the real stack needs.
#   pip install -e ".[prod]"  &&  python -m spacy download en_core_web_lg
prod = [
    "langgraph>=0.2.40", "langchain-core>=0.3",     # agent engine
    "qdrant-client>=1.9",                            # vector store (read)
    "psycopg[binary,pool]>=3.1",                     # Postgres + RLS
    "redis>=5.0",                                    # cache (optional at runtime)
    "langfuse>=2.0", "prometheus-client>=0.20",      # observability
    "presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7",  # PII guardrail
    "fastmcp>=2.0",                                  # remote MCP modules
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
asi-migrate = "app.core.db.migrate:main"
asi-eval = "app.eval.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# E501 line length handled by formatter; B008 FastAPI Depends() default; UP042
# we keep the broadly-compatible `(str, Enum)` idiom over 3.11 StrEnum.
ignore = ["E501", "B008", "UP042"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
