[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "security-intel"
version = "2.0.0"
description = "Multi-agent security intelligence platform built on LangGraph"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # LangGraph + LangChain
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "langchain-openai>=0.3",
    "langchain-mcp-adapters>=0.1",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # Auth
    "pyjwt[crypto]>=2.8",
    # Vector store
    "qdrant-client>=1.12",
    # Database (checkpointing + sessions)
    "psycopg[binary,pool]>=3.1",
    "langgraph-checkpoint-postgres>=2.0",
    # HTTP client
    "httpx>=0.27",
    # Guardrails
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["security_intel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true